Opened 14 years ago

Closed 14 years ago

#1131 closed defect (fixed)

adpcm_ima_qt: fail with conversion from 192kHz to 22kHz

Reported by: ami_stuff Owned by:
Priority: important Component: ffmpeg
Version: git-master Keywords: regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

"-ar 44100" works ok

C:\>ffmpeg -i 192khz.mov -ar 22050 out.wav
ffmpeg version N-39223-gac6798d Copyright (c) 2000-2012 the FFmpeg developers
  built on Mar 25 2012 02:22:42 with gcc 4.5.0 20100414 (Fedora MinGW 4.5.0-1.fc
14)
  configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snapshots/buil
d/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/snapshots/b
uild/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3 --enable-n
onfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-libvorbis
--enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-libopencor
e-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
  libavutil      51. 44.100 / 51. 44.100
  libavcodec     54. 12.100 / 54. 12.100
  libavformat    54.  2.100 / 54.  2.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 65.102 /  2. 65.102
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 10.100 /  0. 10.100
  libpostproc    52.  0.100 / 52.  0.100
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from '192khz.mov':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    creation_time   : 2012-03-25 16:44:49
  Duration: 00:00:05.95, start: 0.000000, bitrate: 1633 kb/s
    Stream #0:0(eng): Audio: adpcm_ima_qt (ima4 / 0x34616D69), 192000 Hz, stereo
, s16, 1536 kb/s
    Metadata:
      creation_time   : 2012-03-25 16:44:49
      handler_name    : &Procedura obs│ugi skrˇtˇw danych Apple
Output #0, wav, to 'out.wav':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    creation_time   : 2012-03-25 16:44:49
    encoder         : Lavf54.2.100
    Stream #0:0(eng): Audio: pcm_s16le ([1][0][0][0] / 0x0001), 22050 Hz, stereo
, s16, 705 kb/s
    Metadata:
      creation_time   : 2012-03-25 16:44:49
      handler_name    : &Procedura obs│ugi skrˇtˇw danych Apple
Stream mapping:
  Stream #0:0 -> #0:0 (adpcm_ima_qt -> pcm_s16le)
Press [q] to stop, [?] for help
Audio encoding failed

Attachments (1)

192kHz.mov (1.2 MB ) - added by ami_stuff 14 years ago.

Download all attachments as: .zip

Change History (4)

by ami_stuff, 14 years ago

Attachment: 192kHz.mov added

comment:1 by Carl Eugen Hoyos, 14 years ago

Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Carl Eugen Hoyos, 14 years ago

Keywords: regression added
Priority: normalimportant

Regression since b2c75b

comment:3 by Michael Niedermayer, 14 years ago

Component: undeterminedFFmpeg
Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.