ffmpeg: fix handling or empty audio packets

Fixes Ticket1131

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>